updated author and book cycles